--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ungap/structured-clone": "^1.2.1",
     "lucide-react": "^0.468.0",
     "next": "14.2.2",
     "react": "^18.3.1",
